--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,13 +1,74 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="kr">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+{{> include/_header}}
 </head>
+
 <body>
-{{> _nav}}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+{{> include/_nav}}
+
+<div class="container" id="main">
+   <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
+      <div class="panel panel-default qna-list">
+          <ul class="list">
+              <li>
+                  <div class="wrap">
+                      <div class="main">
+                          <strong class="subject">
+                              <a href="./qna/show.html">국내에서 Ruby on Rails와 Play가 활성화되기 힘든 이유는 뭘까?</a>
+                          </strong>
+                          <div class="auth-info">
+                              <i class="icon-add-comment"></i>
+                              <span class="time">2016-01-15 18:47</span>
+                              <a href="./user/profile.html" class="author">자바지기</a>
+                          </div>
+                          <div class="reply" title="댓글">
+                              <i class="icon-reply"></i>
+                              <span class="point">8</span>
+                          </div>
+                      </div>
+                  </div>
+              </li>
+              <li>
+                  <div class="wrap">
+                      <div class="main">
+                          <strong class="subject">
+                              <a href="./qna/show.html">runtime 에 reflect 발동 주체 객체가 뭔지 알 방법이 있을까요?</a>
+                          </strong>
+                          <div class="auth-info">
+                              <i class="icon-add-comment"></i>
+                              <span class="time">2016-01-05 18:47</span>
+                              <a href="./user/profile.html" class="author">김문수</a>
+                          </div>
+                          <div class="reply" title="댓글">
+                              <i class="icon-reply"></i>
+                              <span class="point">12</span>
+                          </div>
+                      </div>
+                  </div>
+              </li>
+          </ul>
+          <div class="row">
+              <div class="col-md-3"></div>
+              <div class="col-md-6 text-center">
+                  <ul class="pagination center-block" style="display:inline-block;">
+                      <li><a href="#">«</a></li>
+                      <li><a href="#">1</a></li>
+                      <li><a href="#">2</a></li>
+                      <li><a href="#">3</a></li>
+                      <li><a href="#">4</a></li>
+                      <li><a href="#">5</a></li>
+                      <li><a href="#">»</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3 qna-write">
+                  <a href="./qna/form.html" class="btn btn-primary pull-right" role="button">질문하기</a>
+              </div>
+          </div>
+        </div>
+    </div>
+</div>
+
+{{> include/_scripts}}
 </body>
 </html>
