--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -16,7 +16,7 @@
                   <div class="wrap">
                       <div class="main">
                           <strong class="subject">
-                              <a href="/qna/show/{{id}}">{{title}}</a>
+                              <a href="/question/{{id}}">{{title}}</a>
                           </strong>
                           <div class="auth-info">
                               <i class="icon-add-comment"></i>
@@ -46,7 +46,7 @@
                 </ul>
               </div>
               <div class="col-md-3 qna-write">
-                  <a href="/qna/form" class="btn btn-primary pull-right" role="button">질문하기</a>
+                  <a href="/question/form" class="btn btn-primary pull-right" role="button">질문하기</a>
               </div>
           </div>
         </div>
