--- a/src/main/resources/templates/include/_nav.mustache
+++ b/src/main/resources/templates/include/_nav.mustache
@@ -52,8 +52,8 @@
                 <li class="active"><a href="index.html">Posts</a></li>
                 <li><a href="/user/logout" role="button">로그아웃</a></li>
                 <li><a href="/user/update" role="button">개인정보수정</a></li>
-                <li><a href="/user/loginForm" role="button">로그인</a></li>
-                <li><a href="/user/signupForm" role="button">회원가입</a></li>
+                <li><a href="/loginForm" role="button">로그인</a></li>
+                <li><a href="/signupForm" role="button">회원가입</a></li>
             </ul>
         </div>
     </div>
